--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,17 +2,40 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Voici le portfolio de la photographe Angeline Desdevises. Retrouvez ses nombreux clichées et également ses articles."
     />
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="favicon/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="favicon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <meta name="msapplication-TileColor" content="#603cba" />
+    <meta name="theme-color" content="#ffffff" />
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=M+PLUS+2:wght@500&display=swap');
-      </style>
+      @import url("https://fonts.googleapis.com/css2?family=M+PLUS+2:wght@500&display=swap");
+    </style>
     <title>Angeline Desdevises</title>
   </head>
   <body>
