refractor code with vite

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -36,6 +36,15 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=M+PLUS+2:wght@500&display=swap");
     </style>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8E58DKSK50"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-8E58DKSK50');
+    </script>
     <title>Angeline Desdevises</title>
   </head>
   <body>
